test-services/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
  - name: http
    port: 9090
